# cuda-cpp-llm-learning

./: .gitignore  README.md  flake.nix
learn-cpp-dot-com/13.x/: q_1.cpp  q_3.cpp
learn-cpp-dot-com/14.10/: main.cpp
learn-cpp-dot-com/14.12/: main.cpp
learn-cpp-dot-com/14.3/: main.cpp
learn-cpp-dot-com/14.5/: main.cpp
learn-cpp-dot-com/14.x/: q_1.cpp  q_2.cpp
learn-cpp-dot-com/15.5/: main.cpp
learn-cpp-dot-com/15.7/: main.cpp
learn-cpp-dot-com/15.9/: Point3d.cpp  Point3d.hpp  Vector.cpp  Vector.hpp  main.cpp  step_1.cpp  step_2.cpp
learn-cpp-dot-com/15.x/: main.cpp
learn-cpp-dot-com/16.11/: main.cpp
learn-cpp-dot-com/16.2/: q_1.cpp  q_3.cpp  q_4.cpp
learn-cpp-dot-com/16.3/: main.cpp
learn-cpp-dot-com/16.4/: main.cpp
learn-cpp-dot-com/16.6/: main.cpp  q_5.cpp  q_6.cpp
learn-cpp-dot-com/16.8/: q_1.cpp  q_2.cpp
learn-cpp-dot-com/16.9/: main.cpp
learn-cpp-dot-com/16.x/: q_1.cpp  q_2.cpp  q_3.cpp
learn-cpp-dot-com/17.1/: main.cpp
learn-cpp-dot-com/17.10/: q_1.cpp  q_2.cpp
learn-cpp-dot-com/17.2/: main.cpp
learn-cpp-dot-com/17.3/: main.cpp
learn-cpp-dot-com/17.4/: main.cpp
learn-cpp-dot-com/17.6/: main.cpp
learn-cpp-dot-com/17.7/: q_1.cpp  q_3.cpp
learn-cpp-dot-com/17.x/: q_2.cpp  random.hpp
learn-cpp-dot-com/18.1/: main.cpp
llm-inference-engine/: README.md  flake.nix  pyproject.toml  ruff.toml
llm-inference-engine/src/llm_inference_engine/: __init__.py  engine.py  main.py
programming-massively-parallel-processors/3/: 1a.cu  q1.cu  q2.cu  utils.hpp
programming-massively-parallel-processors/4/: q1.cu
programming-massively-parallel-processors/6/: corner_turn.cu  mat_mul_optimisation.cu  utils.cuh  vector_loads.cu
raylib-test/: flake.nix  main.cpp  meson.build
raylib-test/src/: server.cpp
raylib-test/src/include/: networking.hpp
simple-multi-game/: flake.nix  meson.build
simple-multi-game/src/: client.cpp  server.cpp
simple-multi-game/src/include/: character.hpp  networking.hpp  queue.hpp  render.hpp
